--- a/Euromilhões.html
+++ b/Euromilhões.html
@@ -8,6 +8,7 @@
                 Euro milhões
             </title>
         </head>
+        # Onde o site começa
         <body>
             <br>
             <br>
